<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KartMatch</string>
    <string name="about_menu">About</string>
    <string name="about_title">About KartMatch</string>
    <string name="about_message"><![CDATA[<html>
											 <head></head>
											 <body>
											     <div align=\"center\"><p><font color="#FFBF00">Copyright &copy; 2013, Pierre Dejoue</font></p>
											                           <p>Version: %1$s</p>
											     </div>
											     <p><b>KartMatch</b> is an application designed to randomly assign vehicles to pilots in the context of a kart racing championship.</p>
											     <p>It is open source, available on GitHub: <a href="https://github.com/pierre-dejoue/kart-match">github.com/pierre-dejoue/kart-match</a></p>
											 </body>
										  </html>]]></string>
    <string name="kart_match_intro">Enter the number of pilots and the max car identifier:</string>
    <string name="pilot_names">You can edit the names of the pilots:</string>
    <string name="pilot_groups">You can modify the group composition:</string>
    <string name="cars_selection">Select the cars that are actually available:</string>
    <string name="ok_button">Confirm</string>
    <string name="save_button">Save in History</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="new_race_button">New race</string>
    <string name="del_pilot_button">Delete</string>
    <string name="del_last_race_button">Delete</string>
    <string name="nb_of_pilots_and_cars">Number of pilots and cars</string>
    <string name="nb_of_groups">Number of groups</string>
    <string name="nb_of_groups_warning_1">The number of groups is limited to</string>
    <string name="nb_of_groups_warning_2">to avoid overloading the UI. Please go back to the main menu.</string>
    <string name="pilot_names_activity_intro_1">You requested</string>
    <string name="pilot_names_activity_intro_2">pilots. You can edit their names:</string>
    <string name="final_validate_nb_of_pilots">Number of pilots:</string>
    <string name="final_validate_nb_of_cars">Number of cars:</string>
    <string name="final_validate_nb_of_groups">Number of groups:</string>
    <string name="history_introduction">Races that are currently listed in the history:</string>
    <string name="history_dialog_title">Caution</string>
    <string name="history_dialog_message">The history will be fully deleted! Do you want to continue?</string>
    <string name="history_delete_dialog_title">Caution</string>
    <string name="history_delete_dialog_message">That action will permanently delete that race. Do you want to continue?</string>
    <string name="empty_history">There is currently no race listed in the history, press the \"New race\" button below to start the first one!</string>
    <string name="race_view_introduction">Details of race N:</string>
    <string name="new_race_intro">New race:</string>
    <string name="new_race_dialog_title">Caution</string>
    <string name="new_race_dialog_message">This race was not saved in the history! Do you want to erase it?</string>
    <string name="group_first_letter">G</string>
    <string name="group_capitalize">Group</string>
    <string name="race">race</string>
    <string name="cars">cars</string>
    <string name="pilots">pilots</string>
    <string name="title_activity_pilot_names">Pilots</string>
    <string name="title_activity_cars_selection">Cars</string>
    <string name="title_activity_pilots_cars_validate">Summary</string>
    <string name="title_activity_race_history">Race History</string>
    <string name="title_activity_race_history_single_view">Race Details</string>
    <string name="title_activity_new_race_all_groups">Group Composition</string>
    <string name="title_activity_new_race_final">New Race</string>


</resources>