<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PilotsCarsValidateActivity" >

    <TextView
        android:id="@+id/pilots_cars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
	    android:layout_weight="0.5"
	    android:gravity="center_horizontal|bottom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nb_of_pilots_and_cars" />

    <TextView
        android:id="@+id/groups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
	    android:layout_weight="0.5"
	    android:gravity="center_horizontal|top"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nb_of_groups" />
        
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoNextActivity"
        android:text="@string/confirm_button" />

</LinearLayout>