<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewRaceFinalActivity" >

    <TextView
        android:id="@+id/new_race_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_race_intro" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"  
        android:layout_weight="1"   
    >
		<LinearLayout 
		    android:id="@+id/pilot_list"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		/>        
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelRace"
        android:text="@string/cancel_button" />
        
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRaceToHistory"
        android:text="@string/save_button" />

</LinearLayout>